3.may (ws)
      - import key signature changes from midi files
      - added extended instruments.xml file from Magnus Johansson
      (db)
      - added new document-style icon for MuseScore
2.may (ws)
      - use platform independend QKeySequence::StandardKey for shortcut initialization
      - put only saved files on "open recent" list
      - fix pitch of transposing instruments
      - reworked internal fluid synthesizer:
         - do not process chorus/reverb if no sound is produced; this reduces
           the idle load on my processor from 10% to nearly 0%
         - Samples are only loaded from soundfont if needed. This speeds up
           startup and reduces the memory footprint escpecially
           when using large sound fonts.
         - converted to c++, added namespace protection
      (tb)
      - adding first update of Traditional Chinese (Taiwan) zh_TW locale made by benice
1.may (db)
      - Windows installer decompresses a Windows SoundFont and moves it to the
        MuseScore folder. Work is incomplete since the user must manually install 7-Zip first.
30.apr (lv)
      - MusicXML export of multiple-measure rest, including testfile testMultiMeasureRest.xml
      (db)
      - Added NSIS.InstallOptions.ini to allow more complex customizations to Windows
        installer
29.apr (db)
      - work towards setting file associations on Windows (initial work by la)
       (tb)
      - adding zh_TW instruments file
28.apr (db)
      - improve header image for Windows installer
      - update French translation by JLWaltener
27.apr (lv)
      - MusicXML import of multiple-measure rest
       (db)
      - Change CMakeLists.txt to workaround NSIS bug creating Windows installer
24.apr (lv)
      - MusicXML parsing of multiple-measure rest
23.apr (ws)
      - export percussion clef as "percussion" instead as "PERC" to musicxml
      - fix: time signature changes cause extra bar lines at end